Header: fix styles on small screens

--- a/assets/styles/components/header.scss
+++ b/assets/styles/components/header.scss
@@ -3,13 +3,10 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  justify-content: center;
   overflow: hidden;
   margin-bottom: 4rem;
   position: relative;
-
-  @include mq($from: tablet) {
-    justify-content: center;
-  }
 
   &--small {
     height: 50vh;
@@ -37,6 +34,12 @@
     display: inline-block;
   }
 
+  &--without-image &__logo-container {
+    @include mq($until: tablet) {
+      margin-top: 2.5rem;
+    }
+  }
+
   &__logo,
   &__language-switcher {
     top: 0;
@@ -48,9 +51,18 @@
   }
 
   &__language-switcher {
-    display: flex;
-    justify-content: flex-end;
-    right: 2rem;
+    @include mq($from: tablet) {
+      display: flex;
+      justify-content: flex-end;
+      right: 2rem;
+    }
+
+    @include mq($until: tablet) {
+      align-self: flex-start;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
   }
 
   &__logo {
